              --------------------------------------------------
This file should be used  to briefly summarize all major modifications 
introduced in the code and keeptrack of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

27 Oct 14: A.Dotti ( phys-ctor-em-V10-00-17)
- Address problem #1675, this requires re engineering of 
  all UI commands related to optical processes and created
  in G4OpticalPhysics.
- Co-working tags: xrays-V10-00-06, op-V10-00-09, phys-ctor-em-V10-00-17

23-Oct-2014, M. Karamitros (phys-ctor-em-V10-00-16)
- G4EmDNAChemistry: correct H3O+ settings

17-Oct-2014, M. Karamitros (phys-ctor-em-V10-00-15)
- G4EmDNAChemistry: avoid reseting vibrational model

17-Oct-2014, V.Ivanchenko (phys-ctor-em-V10-00-14)
- Use G4EmParameters used in all standard constructors
  G4EmStandardPhysics_option3,4 - use G4GeneratorBS angular generator
    for bremsstrahlung
  G4EmStandardPhysics_option4 - use RangeFactor = 0.02 (instead of 0.01);
    use G4DeltaAngle angular generator for all ionisation models
  G4EmStandardPhysicsSS, G4EmStandardPhysicsWVI - new constructors

07-Jul-2014, M. Karamitros (phys-ctor-em-V10-00-13)
- Add G4EmDNAChemistry

05-Jun-2014, S. Incerti (phys-ctor-em-V10-00-12)
- Updated G4EmDNAPhysics to G4GenericIon usage for Z>2

05-Apr-2014, V.Ivanchenko (phys-ctor-em-V10-00-11)
- G4EmLivermorePhysics, G4EmLivermorePolarizedPhysics, G4EmPenelopePhysics, 
  G4EmStandardPhysics_option3, G4EmStandardPhysics_option4 - cleanup 
    msc instantiation for hadrons (use the same models for 
    particle/anti_particle)

02-Apr-2014, V.Ivanchenko (phys-ctor-em-V10-00-10)
- G4EmLowEPPhysics, G4EmStandardPhysics_option3, 
  G4EmStandardPhysics_option4, G4EmLivermoreStandardPhysics - cleanup 
    gamma and e- models instantiation

28-Feb-2014, V.Ivanchenko (phys-ctor-em-V10-00-09)